[JOHNNYFIVE-36] Created the functionality for the Beetle, Rhino and Generic robot, send the new needed commands to arduino. Several bugs as the connect/disconnect button between schedulled and gamepad controller.

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -19,6 +19,9 @@
     <string name="full_open_claw">Soltar pinza</string>
     <string name="open_claw">Abrir pinza</string>
     <string name="close_claw">Cerrar pinza</string>  
+    <string name="full_open_claw_little">P++</string>
+    <string name="open_claw_little">P+</string> 
+    <string name="close_claw_little">P-</string>    
     
     <!-- Rhino robot -->
     <string name="charge">Embestir</string>
