--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,6 +7,7 @@
     <string name="pollywog">Renacuajo</string>
     <string name="beetle">Escarabajo</string>
     <string name="rhino">Rhino</string>
+    <string name="crab">Cangrejo</string>
     <string name="generic_robot">Robot genérico</string>
     
     <string name="select_robot">SELECCIONAR ROBOT</string>
@@ -19,12 +20,20 @@
     <string name="full_open_claw">Soltar pinza</string>
     <string name="open_claw">Abrir pinza</string>
     <string name="close_claw">Cerrar pinza</string>  
-    <string name="full_open_claw_little">P++</string>
-    <string name="open_claw_little">P+</string> 
-    <string name="close_claw_little">P-</string>    
-    
+
     <!-- Rhino robot -->
     <string name="charge">Embestir</string>
+
+    <!-- Crab robot -->
+    <!--<string name="amplitude">Amplitud</string>-->
+    <string name="step_size">Tamaño de los pasos</string>
+    <string name="left_amplitude">Amplitud izquierda: </string>
+    <string name="right_amplitude">Amplitud derecha: </string>
+    <string name="speed">Velocidad</string>
+    <string name="period">Período:</string>
+    <string name="legs_coordination">"Coordinación\nentre patas"</string>
+    <string name="phase_difference">Diferencia de fase: </string>
+    <string name="reset">Reinicializar</string>
     
     <!-- DragDropGrid -->
     <string name="remove">Eliminar</string>
@@ -35,5 +44,9 @@
     <string name="save">Guardar</string>
     <string name="load">Cargar</string>
     <string name="settings">Preferencias</string>
+
+    <!-- Error -->
+    <string name="max_exceeded_error">"El valor máximo es "</string>
+    <string name="min_exceeded_error">"El valor mínimo es "</string>
 
 </resources>
