--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -34,8 +34,16 @@
     <string name="schedule">Programar</string>
     
     <!-- Scheduler -->
-    <string name="save">Guardar</string>
-    <string name="load">Cargar</string>
+    <string name="load_scheduled_movements_title">Selecciona el archivo con los movimientos que deseas cargar</string>
+    <string name="delete_scheduled_movements_title">Selecciona el archivo con los movimientos que deseas eliminar</string>
+    <string name="save_scheduled_movements_title">Elige un nombre para esta secuencia de movimientos</string>
+    <string name="save_succeeded">¡La secuencia de movimientos se guardó correctamente!</string>
+    <string name="save_not_succeeded">Hubo un error al guardar la secuencia de movimientos. No se ha guardado nada.</string>
+    <string name="delete_succeeded">¡La secuencia de movimientos se borró correctamente!</string>
+    <string name="delete_not_succeeded">Hubo un error al borrar la secuencia de movimientos. No se ha borrado nada.</string>
+    <string name="load_not_succeeded">Hubo un error al carga la secuencia de movimientos</string>
+    <string name="no_files_stored">No hay archivos de movimientos guardados para este robot</string>
+    <string name="invalid_name">Introduce un nombre válido</string>
 
     <!-- Tips -->
     <string name="pin_explanation_tip_text">Si me pulsas, te enseñaré cómo has de conectar mis pines</string>
