--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,8 @@
     <string name="schedule_tip_text">If you click on me, I will take you to the scheduling movements screen</string>
     <string name="pad_tip_text">If you click on us, we will control the robot</string>
     <string name="claws_tip_text">If you click on us, we will control\nthe claws of the robot</string>
+    <string name="line_follower_text">If you click on me, I will enable or disable the line follower mode</string>
+    <string name="light_avoider_text">If you click on me, I will enable or disable the light avoider mode</string>
     <string name="scheduler_add_commands_text">Click on us to add us to list of the robot movements</string>
     <string name="scheduler_remove_all_text">Click on me to remove all the movements of this robot</string>
     <string name="scheduler_send_text">Click on me to make the robot perform these movements!</string>
